--- a/configs/config_real_local.json
+++ b/configs/config_real_local.json
@@ -1,10 +1,10 @@
 {
-    "exp": "objectron-cup",
+    "exp": "nerf-real-360",
     "dataset_name": "llff",
-    "root_dir": "/mnt/external/cup/example_0",
-    "save_ckpt_path": "/mnt/external/cup/example_0",
+    "root_dir": "/data/synthetic/nerf_real_360/vasedeck/",
+    "save_ckpt_path": "/home/ischakra/src/code/nerf_pl/ckpts/",
     "N_importance": 64,
-    "img_wh": [1440, 1920],
+    "img_wh": [4032, 3024],
     "num_epochs": 20,
     "batch_size": 4096,
     "optimizer": "adam",
