--- a/configs/config_silica.json
+++ b/configs/config_silica.json
@@ -6,9 +6,9 @@
     "N_importance": 64,
     "img_wh": [4032, 3024],
     "num_epochs": 20,
-    "batch_size": 1024,
+    "batch_size": 4096,
     "optimizer": "adam",
     "lr": 5e-4,
     "lr_scheduler": "cosine",
-    "exp_name": "train"
+    "exp_name": "bx4"
 }
