--- a/submit.yaml
+++ b/submit.yaml
@@ -47,11 +47,11 @@ storage:
     # container_name: objectron
 
 jobs:
-# - name: silica-G8-aml
-#   sku: G8
-#   command:
-#   - bash env.sh  
-#   - python train.py --load_json configs/config_silica.json --num_gpus 8
+- name: silica-G8-aml
+  sku: G8
+  command:
+  - bash env.sh  
+  - python train.py --load_json configs/config_silica.json --num_gpus 8
 # - name: vasedeck-G8-aml-bsx4
 #   sku: G8
 #   command:
@@ -60,11 +60,11 @@ jobs:
 #   submit_args:
 #     container_args:
 #         shm_size: 64g
-- name: plant-G8-aml-bsx4
-  sku: G8
-  command:
-  - bash env.sh  
-  - python train.py --load_json configs/config_real_nikon.json --num_gpus 8
-  submit_args:
-    container_args:
-        shm_size: 64g
+# - name: plant-G8-aml-bsx4
+#   sku: G8
+#   command:
+#   - bash env.sh  
+#   - python train.py --load_json configs/config_real_nikon.json --num_gpus 8
+#   submit_args:
+#     container_args:
+#         shm_size: 64g
