--- a/configs/config_real.json
+++ b/configs/config_real.json
@@ -1,14 +1,14 @@
 {
     "exp": "nerf-real-360",
     "dataset_name": "llff",
-    "root_dir": "/mnt/external/vasedeck",
-    "save_ckpt_path": "/mnt/external/vasedeck",
-    "N_importance": 64,
+    "root_dir": "/mnt/external/banana",
+    "save_ckpt_path": "/mnt/external/banana",
+    // "N_importance": 64,
     "img_wh": [4032, 3024],
     "num_epochs": 20,
     "batch_size": 4096,
     "optimizer": "adam",
     "lr": 5e-4,
     "lr_scheduler": "cosine",
-    "exp_name": "bsx4"
+    "exp_name": "bsx4_boundsmin_128_128"
 }
