--- a/configs/config_silica.json
+++ b/configs/config_silica.json
@@ -4,11 +4,11 @@
     "root_dir": "/mnt/external/silica",
     "save_ckpt_path": "/mnt/external/silica",
     "N_importance": 64,
-    "img_wh": [4032, 3024],
+    "img_wh": [484, 363],
     "num_epochs": 20,
     "batch_size": 4096,
     "optimizer": "adam",
     "lr": 5e-4,
     "lr_scheduler": "cosine",
-    "exp_name": "bx4"
+    "exp_name": "bsx4_boundsmin_small"
 }
