--- a/configs/config_real.json
+++ b/configs/config_real.json
@@ -1,8 +1,8 @@
 {
     "exp": "nerf-real-360",
     "dataset_name": "llff",
-    "root_dir": "/mnt/external/vasedeck",
-    "save_ckpt_path": "/mnt/external/vasedeck",
+    "root_dir": "/mnt/external/gundam2",
+    "save_ckpt_path": "/mnt/external/gundam2",
     "N_importance": 64,
     "img_wh": [4032, 3024],
     "num_epochs": 20,
