hackathon tblogging hyperdrive

--- a/configs/config_real.json
+++ b/configs/config_real.json
@@ -1,9 +1,11 @@
 {
     "exp": "nerf-real-360",
     "dataset_name": "llff",
-    "root_dir": "/mnt/external/gundam2",
-    "save_ckpt_path": "/mnt/external/gundam2",
-    "N_importance": 64,
+    "root_dir": "/mnt/external/gundam-gray",
+    "save_ckpt_path": "/mnt/external/gundam-gray",
+    "tb_path": "/mnt/external/gundam-gray/tb",
+    "tqdm_rate": 0,
+    "N_importance": 128,
     "img_wh": [4032, 3024],
     "num_epochs": 20,
     "batch_size": 4096,
