parity after hiatus + attempt to run nerf-synthetic failed

--- a/configs/config_real_local.json
+++ b/configs/config_real_local.json
@@ -1,10 +1,12 @@
 {
     "exp": "nerf-real-360",
     "dataset_name": "llff",
-    "root_dir": "/data/synthetic/nerf_real_360/vasedeck/",
+    "root_dir": "/data/ischakra/synthetic/officechair/",
     "save_ckpt_path": "/home/ischakra/src/code/nerf_pl/ckpts/",
     "N_importance": 64,
-    "img_wh": [4032, 3024],
+    "xyz_encoding_dim": 10,
+    "dir_encoding_dim": 4,
+    "img_wh": [3024, 4032],
     "num_epochs": 20,
     "batch_size": 4096,
     "optimizer": "adam",
