--- a/configs/config_synthetic_local.json
+++ b/configs/config_synthetic_local.json
@@ -1,13 +1,12 @@
 {
     "exp": "nerf-real-360",
     "dataset_name": "llff",
-    "root_dir": "/mnt/external/officechair",
-    "save_ckpt_path": "/mnt/external/officechair",
+    "root_dir": "/data/ischakra/synthetic/nerf_synthetic/chair_train/",
+    "save_ckpt_path": "/data/ischakra/synthetic/nerf_synthetic/chair_train/",
+    "white_back": 0,
     "tqdm_rate": 0,
     "N_importance": 128,
-    "xyz_encoding_dim": 20,
-    "dir_encoding_dim": 8,
-    "img_wh": [3024,4032],
+    "img_wh": [800, 800],
     "num_epochs": 20,
     "batch_size": 4096,
     "optimizer": "adam",
