--- a/nerf_synthetic_baseline.yaml
+++ b/nerf_synthetic_baseline.yaml
@@ -80,14 +80,14 @@ search:
     command:
     - bash env.sh  
     - python train.py 
-      --N_importance 64 
-      --img_wh 400 400 
+      --N_importance {n_importance} 
+      --img_wh 800 800 
       --noise_std 0 
       --num_epochs 16 
-      --batch_size 1024 
+      --batch_size {batch_size} 
       --optimizer adam 
       --lr 5e-4 
-      --lr_scheduler steplr 
+      --lr_scheduler {scheduler} 
       --decay_step 2 4 8 
       --decay_gamma 0.5 
       --root_dir /mnt/external/nerf_synthetic/{instance}
@@ -102,4 +102,11 @@ search:
   # early_termination: BanditPolicy(slack_factor=0.15, evaluation_interval=1, delay_evaluation=10) # optional. Not supported with bayesian sampling
   params:
     - name: instance
-      values: choice('chair','drums','ficus','hotdog','lego','materials','mic','ship')
+      values: choice('chair')
+    - name: batch_size   
+      values: choice(1024,4096)
+    - name: n_importance
+      values: choice(64,128)
+    - name: scheduler
+      values: choice('steplr','cosine')
+
