--- a/nerf_dtu_baseline.yaml
+++ b/nerf_dtu_baseline.yaml
@@ -8,9 +8,11 @@ target:
   # v100x8-redmond
   # name: itplabrr1cl1
   # vc: resrchvc
+  service: sing
+  name:  msroctovc
 
-  service: aml
-  name: v100x1
+  # service: aml
+  # name: v100x1
 
 environment:
   # https://phillytools.azurewebsites.net/master/advanced/5_customizing_dockers.html
@@ -42,8 +44,8 @@ code:
 
 storage:
   external:
-    storage_account_name: ischakraeastus
-    # storage_account_name: ischakraredmond
+    # storage_account_name: ischakraeastus
+    storage_account_name: ischakraredmond
     container_name: instances
     # container_name: objectron
 
@@ -75,18 +77,18 @@ storage:
 
 search:
   job_template:
-    name: nerf_synthetic_{instance}
+    name: nerf_dtu_{instance}
     sku: G1
     command:
     - bash env.sh  
     - python train.py 
-      --load_json configs/config_synthetic.json 
+      --load_json configs/config_dtu.json 
       --num_gpus 1
       --lr 5e-4 
       --warmup_epochs 1 
       --tb_path $$AMLT_OUTPUT_DIR
-      --root_dir /mnt/external/nerf_synthetic/{instance}
-      --save_ckpt_path /mnt/external/nerf_synthetic/{instance}
+      --root_dir /mnt/external/rs_dtu_4/DTU/{instance}
+      --save_ckpt_path /mnt/external/rs_dtu_4/DTU/{instance}
       --exp_name {instance}
   max_trials: 16
   parallel_trials: 16
@@ -98,5 +100,5 @@ search:
   # early_termination: BanditPolicy(slack_factor=0.15, evaluation_interval=1, delay_evaluation=10) # optional. Not supported with bayesian sampling
   params:
     - name: instance
-      # values: choice('chair','drums','ficus','hotdog','lego','materials','mic','ship')
-      values: choice('chair')
+      values: choice('scan15','scan16','scan17','scan18','scan19','scan20','scan21','scan22','scan23','scan24','scan25','scan26','scan27','scan28','scan29','scan30')
+      
